--- a/Project last classifier .ipynb
+++ b/Project last classifier .ipynb
@@ -259,6 +259,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "from sklearn.metrics import precision_score\n",
+    "from sklearn.metrics import recall_score\n",
+    "from sklearn.metrics import f1_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cutoffs = np.arange(0,.98,.01)\n",
+    "\n",
+    "precs = np.zeros((5,len(cutoffs)))\n",
+    "recs = np.zeros((5,len(cutoffs)))\n",
+    "f1s = np.zeros((5,len(cutoffs)))\n",
+    "\n",
+    "\n",
+    "log_reg = LogisticRegression()\n",
+    "\n",
+    "i = 0\n",
+    "for train_index,test_index in kfold.split(X_train,y_train):\n",
+    "    X_train_train,X_train_test = X_train[train_index],X_train[test_index]\n",
+    "    y_train_train,y_train_test = y_train[train_index],y_train[test_index]\n",
+    "    \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
